Revert "Fix: require admin approval Dark mode"
This reverts commit ea7b55ca29cbe969d4449ef4f3d4a8f8525cb362.

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -399,11 +399,6 @@ html.dark-mode ._3x6v {
 	color: var(--base-fourty);
 }
 
-/* Right sidebar: require admin approval */ 
-html.dark-mode ._3ihp {
-	color: var(--base-fourty);
-}
-
 /* Right sidebar: people list */
 html.dark-mode ._4_j5 ._5l37 {
 	color: var(--base-fourty);
